parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    APOSTROPHE
    ARRAY
    AS
    CATCH
    CLONE
    CLOSETAGAL
    COMMENTS
    CONST
    CONTINUE
    DECLARE
    DIE
    DOT
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EXIT
    EXTENDS
    FOREACH
    GLOBAL
    GOTO
    HASHTAG
    IMPLEMENTS
    INCLUDE_ONCE
    INTERFACE
    ISSET
    LIST
    MINUSEQUAL
    NAMESPACE
    PLUSEQUAL
    PRINT
    QUOTES
    THROW
    TRAIT
    TRY
    UNSET
    USE
    VAR
    XOR
    __HALT_COMPILER

Grammar

Rule 0     S' -> program
Rule 1     program -> OPENTAG declaration_list CLOSETAG
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> area fun_declaration
Rule 7     declaration -> header_declaration
Rule 8     declaration -> class_declaration
Rule 9     declaration -> echo_stmt
Rule 10    declaration -> selection_stmt
Rule 11    declaration -> iteration_stmt
Rule 12    declaration -> typeclass
Rule 13    echo_stmt -> echo_stmt ECHO STRING SEMI
Rule 14    echo_stmt -> echo_stmt ECHO VARIABLE SEMI
Rule 15    echo_stmt -> empty
Rule 16    echo_stmt -> echo_stmt ECHO NUM SEMI
Rule 17    echo_stmt -> echo_stmt ECHO boolean SEMI
Rule 18    echo_stmt -> echo_stmt ECHO fun_declaration SEMI
Rule 19    header_declaration -> REQUIRE LPAREN STRING RPAREN SEMI
Rule 20    header_declaration -> INCLUDE LPAREN STRING RPAREN SEMI
Rule 21    class_declaration -> area CLASS ID LBLOCK attribute RBLOCK
Rule 22    class_declaration -> CLASS ID LBLOCK attribute RBLOCK
Rule 23    attribute -> attribute area var_declaration
Rule 24    attribute -> area var_declaration
Rule 25    attribute -> attribute area fun_declaration
Rule 26    attribute -> area fun_declaration
Rule 27    area -> PRIVATE
Rule 28    area -> PUBLIC
Rule 29    area -> PROTECTED
Rule 30    var_declaration -> VARIABLE SEMI var_declaration
Rule 31    var_declaration -> VARIABLE SEMI
Rule 32    var_declaration -> TIMESTIMES VARIABLE SEMI
Rule 33    var_declaration -> TIMESTIMES VARIABLE SEMI var_declaration
Rule 34    var_declaration -> VARIABLE EQUAL NUM SEMI var_declaration
Rule 35    var_declaration -> VARIABLE EQUAL NUM SEMI
Rule 36    var_declaration -> VARIABLE EQUAL boolean SEMI var_declaration
Rule 37    var_declaration -> VARIABLE EQUAL boolean SEMI
Rule 38    var_declaration -> VARIABLE EQUAL VARIABLE SEMI var_declaration
Rule 39    var_declaration -> VARIABLE EQUAL VARIABLE SEMI
Rule 40    var_declaration -> AMPERSANT VARIABLE SEMI var_declaration
Rule 41    var_declaration -> AMPERSANT VARIABLE EQUAL VARIABLE SEMI selection_stmt
Rule 42    var_declaration -> AMPERSANT VARIABLE SEMI
Rule 43    var_declaration -> VARIABLE EQUAL simple_expression SEMI
Rule 44    fun_declaration -> FUNCTION ID LPAREN params RPAREN
Rule 45    fun_declaration -> FUNCTION ID LPAREN params RPAREN compount_stmt
Rule 46    params -> param_list
Rule 47    params -> empty
Rule 48    param_list -> param_list COMMA param_list
Rule 49    param_list -> param
Rule 50    param -> VARIABLE
Rule 51    param -> VARIABLE LBRACKET RBRACKET
Rule 52    compount_stmt -> LBLOCK echo_stmt local_declarations echo_stmt statement_list echo_stmt RBLOCK
Rule 53    local_declarations -> local_declarations var_declaration
Rule 54    local_declarations -> empty
Rule 55    statement_list -> statement_list statement
Rule 56    statement_list -> empty
Rule 57    statement -> expression_stmt
Rule 58    statement -> compount_stmt
Rule 59    statement -> selection_stmt
Rule 60    statement -> iteration_stmt
Rule 61    statement -> return_stmt
Rule 62    statement -> class_declaration
Rule 63    statement -> echo_stmt
Rule 64    expression_stmt -> expression SEMI
Rule 65    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 66    selection_stmt -> IF LPAREN expression RPAREN statement selection
Rule 67    selection -> ELSE statement
Rule 68    selection -> ELSEIF statement selection
Rule 69    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 70    selection_stmt -> CASE NUM COLON statement BREAK SEMI
Rule 71    selection_stmt -> DEFAULT COLON statement BREAK SEMI
Rule 72    iteration_stmt -> FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
Rule 73    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 74    iteration_stmt -> DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
Rule 75    return_stmt -> RETURN SEMI
Rule 76    return_stmt -> RETURN expression SEMI
Rule 77    expression -> var EQUAL expression
Rule 78    expression -> simple_expression
Rule 79    expression -> var EQUAL AMPERSANT VARIABLE
Rule 80    expression -> expression AND expression
Rule 81    expression -> expression OR expression
Rule 82    var -> VARIABLE
Rule 83    var -> VARIABLE LBRACKET expression RBRACKET
Rule 84    simple_expression -> additive_expression relop additive_expression
Rule 85    simple_expression -> additive_expression
Rule 86    relop -> LESS
Rule 87    relop -> LESSEQUAL
Rule 88    relop -> GREATER
Rule 89    relop -> GREATEREQUAL
Rule 90    relop -> DEQUAL
Rule 91    relop -> DISTINT
Rule 92    relop -> ISEQUAL
Rule 93    additive_expression -> additive_expression addop term
Rule 94    additive_expression -> term
Rule 95    additive_expression -> term MINUSMINUS
Rule 96    additive_expression -> term PLUSPLUS
Rule 97    addop -> PLUS
Rule 98    addop -> MINUS
Rule 99    term -> term mulop factor
Rule 100   term -> factor
Rule 101   mulop -> TIMES
Rule 102   mulop -> DIVIDE
Rule 103   factor -> LPAREN expression RPAREN
Rule 104   factor -> var
Rule 105   factor -> NUM
Rule 106   factor -> boolean
Rule 107   factor -> VARIABLE LPAREN args RPAREN
Rule 108   args -> args_list
Rule 109   args -> empty
Rule 110   args -> VOID
Rule 111   args_list -> args_list COMMA expression
Rule 112   args_list -> expression
Rule 113   comment -> OPENCOMMENT commentRep CLOSECOMMENT
Rule 114   commentRep -> FUNCTIONEXP
Rule 115   commentRep -> FUNCTIONEXP commentRep
Rule 116   boolean -> TRUE
Rule 117   boolean -> FALSE
Rule 118   typeclass -> ID VARIABLE EQUAL NEW constructor SEMI
Rule 119   constructor -> ID LPAREN RPAREN
Rule 120   constructor -> ID LPAREN args RPAREN
Rule 121   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSANT            : 40 41 42 79
AND                  : 80
APOSTROPHE           : 
ARRAY                : 
AS                   : 
BREAK                : 70 71
CASE                 : 70
CATCH                : 
CLASS                : 21 22
CLONE                : 
CLOSECOMMENT         : 113
CLOSETAG             : 1
CLOSETAGAL           : 
COLON                : 70 71
COMMA                : 48 111
COMMENTS             : 
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 71
DEQUAL               : 90
DIE                  : 
DISTINT              : 91
DIVIDE               : 102
DO                   : 74
DOT                  : 
ECHO                 : 13 14 16 17 18
ELSE                 : 67
ELSEIF               : 68
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 34 35 36 37 38 39 41 43 77 79 118
EXIT                 : 
EXTENDS              : 
FALSE                : 117
FOR                  : 72
FOREACH              : 
FUNCTION             : 44 45
FUNCTIONEXP          : 114 115
GLOBAL               : 
GOTO                 : 
GREATER              : 88
GREATEREQUAL         : 89
HASHTAG              : 
ID                   : 21 22 44 45 118 119 120
IF                   : 65 66
IMPLEMENTS           : 
INCLUDE              : 20
INCLUDE_ONCE         : 
INTERFACE            : 
ISEQUAL              : 92
ISSET                : 
LBLOCK               : 21 22 52 74
LBRACKET             : 51 83
LESS                 : 86
LESSEQUAL            : 87
LIST                 : 
LPAREN               : 19 20 44 45 65 66 69 72 73 74 103 107 119 120
MINUS                : 98
MINUSEQUAL           : 
MINUSMINUS           : 95
NAMESPACE            : 
NEW                  : 118
NUM                  : 16 34 35 70 105
OPENCOMMENT          : 113
OPENTAG              : 1
OR                   : 81
PLUS                 : 97
PLUSEQUAL            : 
PLUSPLUS             : 96
PRINT                : 
PRIVATE              : 27
PROTECTED            : 29
PUBLIC               : 28
QUOTES               : 
RBLOCK               : 21 22 52 74
RBRACKET             : 51 83
REQUIRE              : 19
RETURN               : 75 76
RPAREN               : 19 20 44 45 65 66 69 72 73 74 103 107 119 120
SEMI                 : 13 14 16 17 18 19 20 30 31 32 33 34 35 36 37 38 39 40 41 42 43 64 70 71 72 72 74 75 76 118
STRING               : 13 19 20
SWITCH               : 69
THROW                : 
TIMES                : 101
TIMESTIMES           : 32 33
TRAIT                : 
TRUE                 : 116
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
VARIABLE             : 14 30 31 32 33 34 35 36 37 38 38 39 39 40 41 41 42 43 50 51 79 82 83 107 118
VOID                 : 110
WHILE                : 73 74
XOR                  : 
__HALT_COMPILER      : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 72 84 84 85 93
addop                : 93
area                 : 6 21 23 24 25 26
args                 : 107 120
args_list            : 108 111
attribute            : 21 22 23 25
boolean              : 17 36 37 106
class_declaration    : 8 62
comment              : 
commentRep           : 113 115
compount_stmt        : 45 58
constructor          : 118
declaration          : 2 3
declaration_list     : 1 2
echo_stmt            : 9 13 14 16 17 18 52 52 52 63
empty                : 15 47 54 56 109
expression           : 64 65 66 72 73 74 76 77 80 80 81 81 83 103 111 112
expression_stmt      : 57
factor               : 99 100
fun_declaration      : 5 6 18 25 26
header_declaration   : 7
iteration_stmt       : 11 60
local_declarations   : 52 53
mulop                : 99
param                : 49
param_list           : 46 48 48
params               : 44 45
program              : 0
relop                : 84
return_stmt          : 61
selection            : 66 68
selection_stmt       : 10 41 59
simple_expression    : 43 78
statement            : 55 65 66 67 68 69 70 71 72 73 74
statement_list       : 52 55
term                 : 93 94 95 96 99
typeclass            : 12
var                  : 69 77 79 104
var_declaration      : 4 23 24 30 33 34 36 38 40 53 72

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPENTAG declaration_list CLOSETAG

    OPENTAG         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPENTAG . declaration_list CLOSETAG
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . area fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (9) declaration -> . echo_stmt
    (10) declaration -> . selection_stmt
    (11) declaration -> . iteration_stmt
    (12) declaration -> . typeclass
    (30) var_declaration -> . VARIABLE SEMI var_declaration
    (31) var_declaration -> . VARIABLE SEMI
    (32) var_declaration -> . TIMESTIMES VARIABLE SEMI
    (33) var_declaration -> . TIMESTIMES VARIABLE SEMI var_declaration
    (34) var_declaration -> . VARIABLE EQUAL NUM SEMI var_declaration
    (35) var_declaration -> . VARIABLE EQUAL NUM SEMI
    (36) var_declaration -> . VARIABLE EQUAL boolean SEMI var_declaration
    (37) var_declaration -> . VARIABLE EQUAL boolean SEMI
    (38) var_declaration -> . VARIABLE EQUAL VARIABLE SEMI var_declaration
    (39) var_declaration -> . VARIABLE EQUAL VARIABLE SEMI
    (40) var_declaration -> . AMPERSANT VARIABLE SEMI var_declaration
    (41) var_declaration -> . AMPERSANT VARIABLE EQUAL VARIABLE SEMI selection_stmt
    (42) var_declaration -> . AMPERSANT VARIABLE SEMI
    (43) var_declaration -> . VARIABLE EQUAL simple_expression SEMI
    (44) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (45) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (27) area -> . PRIVATE
    (28) area -> . PUBLIC
    (29) area -> . PROTECTED
    (19) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (20) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (21) class_declaration -> . area CLASS ID LBLOCK attribute RBLOCK
    (22) class_declaration -> . CLASS ID LBLOCK attribute RBLOCK
    (13) echo_stmt -> . echo_stmt ECHO STRING SEMI
    (14) echo_stmt -> . echo_stmt ECHO VARIABLE SEMI
    (15) echo_stmt -> . empty
    (16) echo_stmt -> . echo_stmt ECHO NUM SEMI
    (17) echo_stmt -> . echo_stmt ECHO boolean SEMI
    (18) echo_stmt -> . echo_stmt ECHO fun_declaration SEMI
    (65) selection_stmt -> . IF LPAREN expression RPAREN statement
    (66) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (69) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (70) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (71) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (72) iteration_stmt -> . FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
    (73) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (74) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (118) typeclass -> . ID VARIABLE EQUAL NEW constructor SEMI
    (121) empty -> .

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    VARIABLE        shift and go to state 14
    TIMESTIMES      shift and go to state 15
    AMPERSANT       shift and go to state 16
    FUNCTION        shift and go to state 17
    PRIVATE         shift and go to state 19
    PUBLIC          shift and go to state 20
    PROTECTED       shift and go to state 21
    REQUIRE         shift and go to state 22
    INCLUDE         shift and go to state 23
    CLASS           shift and go to state 24
    IF              shift and go to state 26
    SWITCH          shift and go to state 27
    CASE            shift and go to state 28
    DEFAULT         shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    ID              shift and go to state 18
    ECHO            reduce using rule 121 (empty -> .)
    CLOSETAG        reduce using rule 121 (empty -> .)

  ! VARIABLE        [ reduce using rule 121 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 121 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 121 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 121 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 121 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 121 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 121 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 121 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 121 (empty -> .) ]
  ! CLASS           [ reduce using rule 121 (empty -> .) ]
  ! IF              [ reduce using rule 121 (empty -> .) ]
  ! SWITCH          [ reduce using rule 121 (empty -> .) ]
  ! CASE            [ reduce using rule 121 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 121 (empty -> .) ]
  ! FOR             [ reduce using rule 121 (empty -> .) ]
  ! WHILE           [ reduce using rule 121 (empty -> .) ]
  ! DO              [ reduce using rule 121 (empty -> .) ]
  ! ID              [ reduce using rule 121 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    area                           shift and go to state 7
    header_declaration             shift and go to state 8
    class_declaration              shift and go to state 9
    echo_stmt                      shift and go to state 10
    selection_stmt                 shift and go to state 11
    iteration_stmt                 shift and go to state 12
    typeclass                      shift and go to state 13
    empty                          shift and go to state 25

state 3

    (1) program -> OPENTAG declaration_list . CLOSETAG
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . area fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (9) declaration -> . echo_stmt
    (10) declaration -> . selection_stmt
    (11) declaration -> . iteration_stmt
    (12) declaration -> . typeclass
    (30) var_declaration -> . VARIABLE SEMI var_declaration
    (31) var_declaration -> . VARIABLE SEMI
    (32) var_declaration -> . TIMESTIMES VARIABLE SEMI
    (33) var_declaration -> . TIMESTIMES VARIABLE SEMI var_declaration
    (34) var_declaration -> . VARIABLE EQUAL NUM SEMI var_declaration
    (35) var_declaration -> . VARIABLE EQUAL NUM SEMI
    (36) var_declaration -> . VARIABLE EQUAL boolean SEMI var_declaration
    (37) var_declaration -> . VARIABLE EQUAL boolean SEMI
    (38) var_declaration -> . VARIABLE EQUAL VARIABLE SEMI var_declaration
    (39) var_declaration -> . VARIABLE EQUAL VARIABLE SEMI
    (40) var_declaration -> . AMPERSANT VARIABLE SEMI var_declaration
    (41) var_declaration -> . AMPERSANT VARIABLE EQUAL VARIABLE SEMI selection_stmt
    (42) var_declaration -> . AMPERSANT VARIABLE SEMI
    (43) var_declaration -> . VARIABLE EQUAL simple_expression SEMI
    (44) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (45) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (27) area -> . PRIVATE
    (28) area -> . PUBLIC
    (29) area -> . PROTECTED
    (19) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (20) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (21) class_declaration -> . area CLASS ID LBLOCK attribute RBLOCK
    (22) class_declaration -> . CLASS ID LBLOCK attribute RBLOCK
    (13) echo_stmt -> . echo_stmt ECHO STRING SEMI
    (14) echo_stmt -> . echo_stmt ECHO VARIABLE SEMI
    (15) echo_stmt -> . empty
    (16) echo_stmt -> . echo_stmt ECHO NUM SEMI
    (17) echo_stmt -> . echo_stmt ECHO boolean SEMI
    (18) echo_stmt -> . echo_stmt ECHO fun_declaration SEMI
    (65) selection_stmt -> . IF LPAREN expression RPAREN statement
    (66) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (69) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (70) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (71) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (72) iteration_stmt -> . FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
    (73) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (74) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (118) typeclass -> . ID VARIABLE EQUAL NEW constructor SEMI
    (121) empty -> .

  ! shift/reduce conflict for CLOSETAG resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    CLOSETAG        shift and go to state 33
    VARIABLE        shift and go to state 14
    TIMESTIMES      shift and go to state 15
    AMPERSANT       shift and go to state 16
    FUNCTION        shift and go to state 17
    PRIVATE         shift and go to state 19
    PUBLIC          shift and go to state 20
    PROTECTED       shift and go to state 21
    REQUIRE         shift and go to state 22
    INCLUDE         shift and go to state 23
    CLASS           shift and go to state 24
    IF              shift and go to state 26
    SWITCH          shift and go to state 27
    CASE            shift and go to state 28
    DEFAULT         shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    ID              shift and go to state 18
    ECHO            reduce using rule 121 (empty -> .)

  ! CLOSETAG        [ reduce using rule 121 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 121 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 121 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 121 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 121 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 121 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 121 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 121 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 121 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 121 (empty -> .) ]
  ! CLASS           [ reduce using rule 121 (empty -> .) ]
  ! IF              [ reduce using rule 121 (empty -> .) ]
  ! SWITCH          [ reduce using rule 121 (empty -> .) ]
  ! CASE            [ reduce using rule 121 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 121 (empty -> .) ]
  ! FOR             [ reduce using rule 121 (empty -> .) ]
  ! WHILE           [ reduce using rule 121 (empty -> .) ]
  ! DO              [ reduce using rule 121 (empty -> .) ]
  ! ID              [ reduce using rule 121 (empty -> .) ]

    declaration                    shift and go to state 34
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    area                           shift and go to state 7
    header_declaration             shift and go to state 8
    class_declaration              shift and go to state 9
    echo_stmt                      shift and go to state 10
    selection_stmt                 shift and go to state 11
    iteration_stmt                 shift and go to state 12
    typeclass                      shift and go to state 13
    empty                          shift and go to state 25

state 4

    (3) declaration_list -> declaration .

    CLOSETAG        reduce using rule 3 (declaration_list -> declaration .)
    VARIABLE        reduce using rule 3 (declaration_list -> declaration .)
    TIMESTIMES      reduce using rule 3 (declaration_list -> declaration .)
    AMPERSANT       reduce using rule 3 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 3 (declaration_list -> declaration .)
    PRIVATE         reduce using rule 3 (declaration_list -> declaration .)
    PUBLIC          reduce using rule 3 (declaration_list -> declaration .)
    PROTECTED       reduce using rule 3 (declaration_list -> declaration .)
    REQUIRE         reduce using rule 3 (declaration_list -> declaration .)
    INCLUDE         reduce using rule 3 (declaration_list -> declaration .)
    CLASS           reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    SWITCH          reduce using rule 3 (declaration_list -> declaration .)
    CASE            reduce using rule 3 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    DO              reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    ECHO            reduce using rule 3 (declaration_list -> declaration .)


state 5

    (4) declaration -> var_declaration .

    CLOSETAG        reduce using rule 4 (declaration -> var_declaration .)
    VARIABLE        reduce using rule 4 (declaration -> var_declaration .)
    TIMESTIMES      reduce using rule 4 (declaration -> var_declaration .)
    AMPERSANT       reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    PRIVATE         reduce using rule 4 (declaration -> var_declaration .)
    PUBLIC          reduce using rule 4 (declaration -> var_declaration .)
    PROTECTED       reduce using rule 4 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> var_declaration .)
    INCLUDE         reduce using rule 4 (declaration -> var_declaration .)
    CLASS           reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)


state 6

    (5) declaration -> fun_declaration .

    CLOSETAG        reduce using rule 5 (declaration -> fun_declaration .)
    VARIABLE        reduce using rule 5 (declaration -> fun_declaration .)
    TIMESTIMES      reduce using rule 5 (declaration -> fun_declaration .)
    AMPERSANT       reduce using rule 5 (declaration -> fun_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> fun_declaration .)
    PRIVATE         reduce using rule 5 (declaration -> fun_declaration .)
    PUBLIC          reduce using rule 5 (declaration -> fun_declaration .)
    PROTECTED       reduce using rule 5 (declaration -> fun_declaration .)
    REQUIRE         reduce using rule 5 (declaration -> fun_declaration .)
    INCLUDE         reduce using rule 5 (declaration -> fun_declaration .)
    CLASS           reduce using rule 5 (declaration -> fun_declaration .)
    IF              reduce using rule 5 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 5 (declaration -> fun_declaration .)
    CASE            reduce using rule 5 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 5 (declaration -> fun_declaration .)
    FOR             reduce using rule 5 (declaration -> fun_declaration .)
    WHILE           reduce using rule 5 (declaration -> fun_declaration .)
    DO              reduce using rule 5 (declaration -> fun_declaration .)
    ID              reduce using rule 5 (declaration -> fun_declaration .)
    ECHO            reduce using rule 5 (declaration -> fun_declaration .)


state 7

    (6) declaration -> area . fun_declaration
    (21) class_declaration -> area . CLASS ID LBLOCK attribute RBLOCK
    (44) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (45) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt

    CLASS           shift and go to state 36
    FUNCTION        shift and go to state 17

    fun_declaration                shift and go to state 35

state 8

    (7) declaration -> header_declaration .

    CLOSETAG        reduce using rule 7 (declaration -> header_declaration .)
    VARIABLE        reduce using rule 7 (declaration -> header_declaration .)
    TIMESTIMES      reduce using rule 7 (declaration -> header_declaration .)
    AMPERSANT       reduce using rule 7 (declaration -> header_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> header_declaration .)
    PRIVATE         reduce using rule 7 (declaration -> header_declaration .)
    PUBLIC          reduce using rule 7 (declaration -> header_declaration .)
    PROTECTED       reduce using rule 7 (declaration -> header_declaration .)
    REQUIRE         reduce using rule 7 (declaration -> header_declaration .)
    INCLUDE         reduce using rule 7 (declaration -> header_declaration .)
    CLASS           reduce using rule 7 (declaration -> header_declaration .)
    IF              reduce using rule 7 (declaration -> header_declaration .)
    SWITCH          reduce using rule 7 (declaration -> header_declaration .)
    CASE            reduce using rule 7 (declaration -> header_declaration .)
    DEFAULT         reduce using rule 7 (declaration -> header_declaration .)
    FOR             reduce using rule 7 (declaration -> header_declaration .)
    WHILE           reduce using rule 7 (declaration -> header_declaration .)
    DO              reduce using rule 7 (declaration -> header_declaration .)
    ID              reduce using rule 7 (declaration -> header_declaration .)
    ECHO            reduce using rule 7 (declaration -> header_declaration .)


state 9

    (8) declaration -> class_declaration .

    CLOSETAG        reduce using rule 8 (declaration -> class_declaration .)
    VARIABLE        reduce using rule 8 (declaration -> class_declaration .)
    TIMESTIMES      reduce using rule 8 (declaration -> class_declaration .)
    AMPERSANT       reduce using rule 8 (declaration -> class_declaration .)
    FUNCTION        reduce using rule 8 (declaration -> class_declaration .)
    PRIVATE         reduce using rule 8 (declaration -> class_declaration .)
    PUBLIC          reduce using rule 8 (declaration -> class_declaration .)
    PROTECTED       reduce using rule 8 (declaration -> class_declaration .)
    REQUIRE         reduce using rule 8 (declaration -> class_declaration .)
    INCLUDE         reduce using rule 8 (declaration -> class_declaration .)
    CLASS           reduce using rule 8 (declaration -> class_declaration .)
    IF              reduce using rule 8 (declaration -> class_declaration .)
    SWITCH          reduce using rule 8 (declaration -> class_declaration .)
    CASE            reduce using rule 8 (declaration -> class_declaration .)
    DEFAULT         reduce using rule 8 (declaration -> class_declaration .)
    FOR             reduce using rule 8 (declaration -> class_declaration .)
    WHILE           reduce using rule 8 (declaration -> class_declaration .)
    DO              reduce using rule 8 (declaration -> class_declaration .)
    ID              reduce using rule 8 (declaration -> class_declaration .)
    ECHO            reduce using rule 8 (declaration -> class_declaration .)


state 10

    (9) declaration -> echo_stmt .
    (13) echo_stmt -> echo_stmt . ECHO STRING SEMI
    (14) echo_stmt -> echo_stmt . ECHO VARIABLE SEMI
    (16) echo_stmt -> echo_stmt . ECHO NUM SEMI
    (17) echo_stmt -> echo_stmt . ECHO boolean SEMI
    (18) echo_stmt -> echo_stmt . ECHO fun_declaration SEMI
